# ChangeLog for genkernel
# Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Nov 2007; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh:
  Force dmraid to be built with -j1 for bug #188273

  16 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> genkernel.conf:
  My original sed of LVM2->LVM caught a few too many things. Thanks to Robin
  Johnson <robbat2@gentoo.org> for pointing them out and providing the fix in
  bug #198546.

  13 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_determineargs.sh,
  genkernel.conf, genkernel:
  Added config defaulting for --mdadm for bug #198694. Thanks to John R.
  Graham <john_r_graham@mindspring.com> for providing the patch. This is
  3.4.9_pre9 for testing.

  08 Nov 2007; Andrew Gaffney <agaffney@gentoo.org> gen_arch.sh:
  Revert patch from bug #190327 as it breaks well more than it fixed.

  07 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> alpha/config.sh,
  gen_cmdline.sh, gen_determineargs.sh, gen_funcs.sh, gen_initramfs.sh,
  gen_initrd.sh, gen_package.sh, genkernel, genkernel.conf, ia64/config.sh,
  mips/config.sh, parisc/config.sh, parisc64/config.sh, ppc/config.sh,
  ppc64/config.sh, sparc/config.sh, sparc64/config.sh, um/config.sh,
  x86/config.sh, x86_64/config.sh, xen0/config.sh, xenU/config.sh:
  Added a nice patch from John R. Graham <john_r_graham@mindspring.com> to
  allow all command line options to be configurable from within the
  genkernel.conf file. This is for bug #182616. This is genkernel 3.4.9_pre8
  for testing.

  07 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  Fixed the noload module code. Thanks to Mijail Fedorovich
  <mfedorovich@gmail.com> for pointing it out in bug #198187.

  07 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts, generic/linuxrc:
  Added an update patch from Alon Bar-Lev <alonbl@gentoo.org> in bug #197244