@@ -408,8 +408,15 @@ append_auxilary() {
 			rm -f ${TEMP}/initramfs-aux-temp/sbin/cryptsetup
 			cp /bin/cryptsetup ${TEMP}/initramfs-aux-temp/sbin/cryptsetup
 			chmod +x "${TEMP}/initramfs-aux-temp/sbin/cryptsetup"
+		elsif is_static /sbin/cryptsetup
+		then
+			print_info 1 "Including LUKS support"
+			rm -f ${TEMP}/initramfs-aux-temp/sbin/cryptsetup
+			cp /sbin/cryptsetup ${TEMP}/initramfs-aux-temp/sbin/cryptsetup
+		chmod +x "${TEMP}/initramfs-aux-temp/sbin/cryptsetup"
+
 		else
-			print_info 1 "LUKS support requires static cryptsetup at /bin/cryptsetup"
+			print_info 1 "LUKS support requires static cryptsetup at /bin/cryptsetup or /sbin/cryptsetup"
 			print_info 1 "Not including LUKS support"
 		fi
 	fi
